Commit Grafica MOTHERFUCKERS

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,10 @@
         <menu>
             <item
                 android:icon="@drawable/ic_menu_share"
+                android:title="Grafica"
+                android:id="@+id/grafica"/>
+            <item
+                android:icon="@drawable/ic_menu_share"
                 android:title="Busqueda Incremental"
                 android:id="@+id/busqInc"/>
             <item
