--- a/app/src/main/res/menu/activity_interpolacion_drawer.xml
+++ b/app/src/main/res/menu/activity_interpolacion_drawer.xml
@@ -5,6 +5,20 @@
     <item
         android:id="@+id/app_bar_search"
         android:actionViewClass="android.support.v7.widget.SearchView"
-        android:title="Search" />
+        android:title="Metodos de Interpolacion" >
+        <menu >
+            <item
+                android:id="@+id/newton"
+                android:actionViewClass="android.support.v7.widget.SearchView"
+                android:title="Metodo de Newton"
+                android:icon="@drawable/ic_menu_share" />
+            <item android:title="Metodo de Langrange"
+                android:id="@+id/langrange"
+                android:icon="@drawable/ic_menu_share1" />
+            <item android:title="Metodo de Neville"
+                android:icon="@drawable/ic_menu_share"
+                android:id="@+id/neville" />
+        </menu>
+    </item>
 
 </menu>
