--- a/app/src/main/res/menu/sistemas_de_ecuaciones.xml
+++ b/app/src/main/res/menu/sistemas_de_ecuaciones.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+    <item android:title="Ecuaciones una Var"
+        android:id="@+id/solEcuaciones" />
+    <item android:title="Interpolacion"
+        android:id="@+id/interpolation" />
+    <item android:title="Sistemas de Ecuaciones"
+        android:id="@+id/sistemasEcuaciones" />
 </menu>
