--- a/app/src/main/res/layout/content_interpolacion.xml
+++ b/app/src/main/res/layout/content_interpolacion.xml
@@ -18,18 +18,18 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView17"
         android:text="Coordenada Abscisa(x)"
-        android:layout_alignTop="@+id/editText10"
+        android:layout_alignTop="@+id/valX"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
+        android:inputType="numberSigned|numberDecimal"
         android:ems="10"
         android:layout_marginTop="28dp"
-        android:id="@+id/editText11"
-        android:layout_below="@+id/editText10"
+        android:id="@+id/valY"
+        android:layout_below="@+id/valX"
         android:layout_toRightOf="@+id/textView18"
         android:layout_toEndOf="@+id/textView18" />
 
@@ -38,70 +38,20 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView18"
         android:text="Coordenada Ordenada(y)"
-        android:layout_alignTop="@+id/editText11"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView4"
-        android:text="Valor X a evaluar"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/editText11"
+        android:layout_alignTop="@+id/valY"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:ems="10"
-        android:id="@+id/editText12"
-        android:layout_alignTop="@+id/textView4"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignLeft="@+id/editText11"
-        android:layout_alignStart="@+id/editText11" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
+        android:inputType="numberSigned|numberDecimal"
         android:ems="10"
         android:layout_marginTop="73dp"
-        android:id="@+id/editText10"
+        android:id="@+id/valX"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/textView18"
         android:layout_toRightOf="@+id/textView18" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_input_add"
-        android:layout_marginRight="12dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="17dp"
-        android:id="@+id/floatingActionButton2"
-        app:backgroundTint="?attr/actionMenuTextColor"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_delete"
-        android:layout_above="@+id/floatingActionButton2"
-        android:layout_alignRight="@+id/floatingActionButton2"
-        android:layout_alignEnd="@+id/floatingActionButton2"
-        android:layout_marginBottom="16dp"
-        android:id="@+id/floatingActionButton3"
-        app:backgroundTint="?attr/actionMenuTextColor" />
 
     <TextView
         android:text="Agregar Punto"
@@ -116,13 +66,105 @@
         android:layout_marginBottom="11dp" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/textView20"
+        android:layout_marginTop="21dp"
+        android:id="@+id/metodoSelec" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberSigned|numberDecimal"
+        android:ems="10"
+        android:id="@+id/value"
+        android:layout_alignBaseline="@+id/textView4"
+        android:layout_alignBottom="@+id/textView4"
+        android:layout_alignLeft="@+id/valY"
+        android:layout_alignStart="@+id/valY" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:text="Valor X a evaluar"
+        android:layout_marginTop="29dp"
+        android:layout_below="@+id/valY"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_delete"
+        android:id="@+id/floatingActionButton3"
+        app:backgroundTint="?attr/actionMenuTextColor"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/floatingActionButton2"
+        android:layout_alignStart="@+id/floatingActionButton2"
+        android:layout_marginBottom="15dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="23dp"
+        android:id="@+id/floatingActionButton2"
+        app:backgroundTint="?attr/actionMenuTextColor"
+        android:layout_above="@+id/floatingActionButton3"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:srcCompat="@android:drawable/ic_media_play"
+        android:layout_marginBottom="15dp"
+        android:id="@+id/floatingActionButton"
+        app:backgroundTint="?attr/actionMenuTextColor"
+        android:layout_above="@+id/floatingActionButton2"
+        android:layout_alignLeft="@+id/floatingActionButton2"
+        android:layout_alignStart="@+id/floatingActionButton2" />
+
+    <TextView
+        android:text="Calcular Valor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView21"
+        android:layout_marginBottom="11dp"
+        android:layout_alignBottom="@+id/floatingActionButton"
+        android:layout_alignRight="@+id/textView19"
+        android:layout_alignEnd="@+id/textView19" />
+
+    <TextView
         android:text="Eliminar Puntos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView20"
-        android:layout_alignBottom="@+id/floatingActionButton3"
-        android:layout_alignLeft="@+id/textView19"
-        android:layout_alignStart="@+id/textView19"
-        android:layout_marginBottom="11dp" />
+        android:layout_below="@+id/floatingActionButton2"
+        android:layout_alignRight="@+id/textView19"
+        android:layout_alignEnd="@+id/textView19"
+        android:layout_marginTop="11dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textoValor"
+        android:layout_below="@+id/floatingActionButton"
+        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_alignRight="@+id/textView4"
+        android:layout_alignEnd="@+id/textView4" />
 
 </RelativeLayout>
